2004-07-02  MenTaLguY  <mental@rydia.net>

	* src/attributes.cpp, src/attributes.h, src/sp-item-group.cpp,
	  src/sp-item-group.h:

	  Removed the "inkscape:groupmode" attribute and added note about how
	  the group/layer mode setting needs to be per-view, not global.

	* src/desktop.cpp, src/desktop.h,
	  src/object-hierarchy.cpp, src/object-hierarchy.h:

	  Added notification signals for switching layers, as well as putting
	  groups in layer mode when they are being used as layers.

	  Notably, you can now call SPDesktop::connectCurrentLayerChanged() to
	  connect to a SigC++ signal to be notified when the current layer
	  changes.

	* src/interface.cpp, src/object-ui.cpp:

	  Fixed up the "Enter Group" and "Leave Group" context menu
	  commands a bit, and implement them both in the same places.

2004-07-02  Carl Hetherington  <inkscape@carlh.net>

	* src/desktop-snap.cpp, src/desktop-snap.h, src/snap.cpp,
	src/snap.h, src/Makefile_insert src/arc-context.cpp src/draw-context.cpp
        src/dyna-draw-context.cpp src/make.dep src/make.files src/make.ofiles
        src/makefile.msc src/nodepath.cpp src/rect-context.cpp src/select-context.cpp
        src/selection-chemistry.cpp src/seltrans.cpp src/sp-namedview.h
        src/spiral-context.cpp src/star-context.cpp: renamed
	desktop-snap.* to snap.* since it has nothing to do with the
	desktop any more.

	* src/draw-context.cpp: Temporary hack to prevent snapping
	completely failing to work when snapping to bbox points.  Support
	shift-disables-snap for freehand drawing.

	* src/snap.cpp, src/snap.h: Added some temporary methods to assist
	with hacks elsewhere.

2004-07-01  Kees Cook  <kees@outflux.net>

	* src/xml/repr.h, src/xml/repr-util.h, src/dialogs/rdf.cpp:
	  moved "repr_lookup_name" into the repr-util collection so
	  that the RDF stuff doesn't need to know about SPRepr internals.
	  Now that I've started to grok the SPRepr stuff, this seems best.